--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>我爱你</title>
+<title>love617</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -23,28 +23,31 @@
 </head>
 <body>
 <audio autoplay="autopaly">
-  <source src="renxi.mp3" type="audio/mp3" />
+  <source src="zhongyudengdaoni.mp3" type="audio/mp3" />
 </audio>
 <div id="main">
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的丫头，我爱你，虽然你看不见我对你的告白</span><br>
+      <div id="code"> <font color="#FF6666"> <span class="say">亲爱的猪猪617，我爱你！</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+        <span class="say"> 承诺已久的网站，我终于做好啦哈哈 </span><br>
+        <span class="say"> 虽然我有严重拖延症，但是答应你的我一定都会做到！</span><br>
+        <span class="say"></span><br>
+	    <span class="say"> 和你在一起的这几年，是我人生最丰富多彩的阶段</span><br>
+        <span class="say">你是老天送我最好的礼物，我会永远珍惜</span><br>
+        <span class="say"></span><br>
+        <span class="say">虽然我也有很多缺点，有时候也会惹你生气</span><br>
+        <span class="say">但是我都会努力改正，争取做一个合格的男朋友</span><br>
+        <span class="say"></span><br>
+        <span class="say">让我们一起加油，为我们美好的未来打拼！</span><br>
+        <span class="say">让我们......相伴一生！</span><br>
 	<span class="say"></span><br>
-        <span class="say">我会好好加油！我们要有更好的未来</span><br>
-	<span class="say"></span><br>
-        <span class="say">因为很爱你，所以我会照顾好你的</span><br>
-        <span class="say">虽然我有时候很啰嗦！</span><br>
-        <span class="say">有时候也会让丫头伤心，哭泣！</span><br>
-        <span class="say"> 但是我相信没有什么是过不去的，我们一起努力！</span><br>
-	<span class="say"></span><br>
-        <span class="say"><span class="space"></span> --- 爱你的逗比---</span> </font>
+        <span class="say"><span class="space"></span> --- 爱你的老王---</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的丫头，我喜欢你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的宝贝，我们相恋</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
@@ -178,13 +181,17 @@
             }
         }));
 
+        var loadPhotos = eval(Jscex.compile("async", function () {
+            tree.showPhoto();
+        }));
+
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2016,6, 24); 			//时间年月日
-		    together.setHours(16);						//小时	
-		    together.setMinutes(53);					//分钟
+		    together.setFullYear(2017, 3, 24); 			//时间年月日
+		    together.setHours(15);						//小时	
+		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
-		    together.setMilliseconds(2);				//秒第二位
+		    together.setMilliseconds(0);				//秒第二位
 
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
@@ -203,15 +210,14 @@
             textAnimate().start();
 
             $await(jumpAnimate());
+            /* $await(loadPhotos()); */
         }));
 
         runAsync().start();
     })();
     </script>
 
-<div style="text-align:center;">
-<p>来源：<a href="index.html" title="逗比的猪窝">猪窝</a></p>
-</div>
+    <img src="images/photo1.jpg"/>
 
 </body>
 </html>
